--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -16449,6 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=El fragment no es pot afegir perquè ja s'ha esborrat.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=No es pot suprimir l'entrada del fragment perquè una o més plantilles de pàgina la necessiten.
 the-fragment-entry-could-not-be-found=No s'ha pogut trobar l'entrada del fragment.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=No s'ha trobat la versió de l'entorn de treball.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=L'URL amigable excedeix el límit de {0} caràcters en el seu format codificat. Introduïu un URL més curt.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=És possible que la URL amigable generada a partir de la adreça de correu electrònic que heu sol·licitat entri en conflicte amb una URL amigable que ja existeixi.
