--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -16449,6 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Le fragment ne peut plus être ajouté parce qu'il a été supprimé.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=L'entrée de fragment ne peut être supprimée parce qu'elle est nécessaire pour un ou plusieurs modèles de page.
 the-fragment-entry-could-not-be-found=L'entrée de fragment est introuvable.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=La version du framework n'a pas pu être trouvée.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=L'URL conviviale dépasse la limite de {0} caractères dans son format codé. Veuillez saisir une URL plus courte.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=L'URL conviviale générée par l'adresse email que vous avez demandée peut rentrer en conflit avec une URL conviviale existante.
