--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -16450,6 +16450,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=A töredék nem adható hozzá, mert törölték.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=A töredék bejegyzés nem törölhető, mert egy vagy több oldalsablonnak szüksége van rá.
 the-fragment-entry-could-not-be-found=A fragmensbejegyzés nem található.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=A keretrendszer-verzió nem található.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=A böngészőbarát URL-cím kódolt formátumban túllépi a {0} karakteres korlátozást. Adjon meg egy rövidebb URL-címet.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=A kért e-mail-címmel létrehozott egyszerű URL ütközhet egy már létező egyszerű URL-lel.
