--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -16449,6 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=このフラグメントは削除されているため、もう追加できません。
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=１つ以上のページテンプレートから参照されているため、フラグメントエントリーは削除できません。
 the-fragment-entry-could-not-be-found=フラグメントエントリーが見つかりませんでした。
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=フレームワークのバージョンが見つかりません。
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=フレンドリURLの長さが、エンコード形式の上限値である{0}文字を超えています。より短いURLを入力してください。
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=選択したフレンドリーURLは既存するフレンドリーURLと問題が発生する可能性があります。
