--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -16450,6 +16450,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Het fragment kan niet meer worden toegevoegd omdat het is verwijderd.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=De fragmentinvoer kan niet verwijderd worden omdat hij vereist is voor een of meerdere paginasjablonen.
 the-fragment-entry-could-not-be-found=De fragmentrecord is niet gevonden.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=De frameworkversie werd niet gevonden.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=De beschrijvende URL overschrijdt de limiet van {0} tekens in gecodeerd formaat. Voer een kortere URL in.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=De beschrijvende URL gegenereerd uit het e-mailadres dat u hebt opgegeven is mogelijk in strijd met een bestaande beschrijvende URL.
