--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -16447,6 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=O fragmento já não pode ser adicionado porque foi excluído.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=A entrada de fragmento não pode ser excluída porque é exigida por um ou mais modelos de página.
 the-fragment-entry-could-not-be-found=Não foi possível encontrar a entrada de fragmento.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=A versão do framework não pode ser encontrada.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=O URL amigável excede o limite de {0} caracteres em seu formato codificado. Insira um URL mais curto.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=A URL amigável gerada pelo email que você solicitou pode conflitar com uma já existente.
