--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -16447,6 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Fragmenta ni več mogoče dodati, ker je bil izbrisan. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Vnosa fragmenta ni mogoče izbrisati, ker ga zahteva ena ali več predlog strani. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Vnosa fragmenta ni bilo mogoče najti. (Automatic Translation)
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Verzije frameworka ni moč najti.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Prijazen URL, ki ga ustvari zahtevani e-poštni naslov, je lahko v nasprotju z obstoječim prijaznim URL-jem. (Automatic Translation)
