--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -16447,6 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Det går inte längre att lägga till fragmentet eftersom det tagits bort.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Det går inte att ta bort fragmentposten eftersom den krävs av en eller flera mallar.
 the-fragment-entry-could-not-be-found=Fragmentposten hittades inte.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Angiven ramverksversion hittades inte.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=Vänlig URL överskrider gränsen på {0} tecken i det kodade formatet. Ange en kortare URL.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Vänlig URL som genererats av e-postadressen du begärde kan vara i konflikt med en befintlig vänlig URL.
