--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -16448,6 +16448,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=由於此頁面片段已被刪除，故無法再加入。
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=無法刪除片段條目，因為它需要一個或多個頁面範本。 (Automatic Translation)
 the-fragment-entry-could-not-be-found=找不到頁面片段條目。
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=找不到框架版本。
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=友善網址超出編碼格式 {0} 個字元數限制。請輸入較短的 URL。
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=以您請求的電子郵件網址產生友善網址與已存在的友善網址衝突。
