--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -16447,6 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Фрагментът вече не може да се добавя, защото е изтрит. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Записът на фрагмента не може да бъде изтрит, защото се изисква от един или повече шаблони за страници. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Записът за фрагмент не може да бъде намерен. (Automatic Translation)
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Версията на фреймуърка не може да бъде намерена.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Приятелски настроен URL адрес, генериран от имейл адреса, който сте заявили, може да е в конфликт със съществуващ приятелски URL адрес. (Automatic Translation)
