--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -16449,6 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Ya no se puede añadir el fragmento porque se eliminó.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=No se puede eliminar la entrada de fragmento porque se necesita para una o más plantillas de página.
 the-fragment-entry-could-not-be-found=No se encuentra la entrada del fragmento.
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=La versión del framework no ha podido ser encontrada.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=La URL descriptiva supera el límite de {0} caracteres en el formato codificado. Escriba una URL más corta.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Por favor, introduce una dirección de correo válida.
