--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -16447,6 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Fragmento pridėti nebegalima, nes jis panaikintas. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragmento įrašo panaikinti negalima, nes to reikalauja vienas ar daugiau puslapio šablonų. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Fragmento įrašo rasti nepavyko. (Automatic Translation)
+the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Nepavyko rasti sistemos versijos. (Automatic Translation)
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Pageidaujamo el. pašto adreso sugeneruotas draugiškas URL gali prieštarauti esamam draugiškam URL. (Automatic Translation)
