--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11588,6 +11588,7 @@ page-design-options=Opcions de disseny de pàgina
 page-display-order=Ordre de la visualització de la pàgina
 page-edition-mode-x=Mode d'edició de pàgina: {0}
 page-editor-auto-extend-session-enabled-description=En habilitar-la, la sessió s'ampliarà automàticament mentre l'editor de pàgines estigui obert.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Editor de pàgines
 page-editor-max-number-of-items-edit-mode-description=El nombre màxim d'elements que es mostren en una col·lecció està limitat en el mode d'edició a causa del rendiment de representació de pàgines. Aquest límit no afecta la visualització de la col·lecció a la pàgina publicada. Tingueu en compte que augmentar aquest valor podria afectar el rendiment del mode d'edició d'una pàgina de contingut.
 page-elements=Elements de la pàgina
