--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11585,6 +11585,7 @@ page-design-options=Sivun Mallin Valinnat
 page-display-order=Sivun esityksen järjestys
 page-edition-mode-x=Sivun muokkaustila: {0}
 page-editor-auto-extend-session-enabled-description=Käyttöönotto laajentaa istunnon automaattisesti, kun sivueditori avataan.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Sivueditori
 page-editor-max-number-of-items-edit-mode-description=Kokoelmassa näytettävien kohteiden enimmäismäärä on rajoitettu muokkaustilassa sivun hahmonnuksen suorituskyvyn takia. Tämä raja ei vaikuta kokoelman havainnollistukseen julkaistulla sivulla. Huomioithan, että tämän arvon kasvattamisella voi olla negatiivinen vaikutus sisältösivun muokkaustilan suorituskykyyn.
 page-elements=Sivun Elementit
