--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11586,6 +11586,7 @@ page-design-options=Opções de design de página
 page-display-order=Ordem de Visualização da Página
 page-edition-mode-x=Modo de edição de página: {0}
 page-editor-auto-extend-session-enabled-description=Habilitar estenderá a sessão automaticamente enquanto o editor de página estiver aberto.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Editor de página
 page-editor-max-number-of-items-edit-mode-description=O número máximo de itens exibidos em uma coleção é limitado no modo Editar, devido ao desempenho da renderização da página. Este limite não afeta a visualização da coleção na página publicada. Esteja ciente de que o aumento deste valor pode ter um impacto negativo no desempenho do modo de edição de uma página de conteúdo.
 page-elements=Elementos da página
