--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11586,6 +11586,7 @@ page-design-options=Alternativ för siddesign
 page-display-order=Sidornas ordningföljd
 page-edition-mode-x=Sidredigeringsläge: {0}
 page-editor-auto-extend-session-enabled-description=Aktivering förlänger automatiskt sessionen när sidredigeraren är öppen.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Sidredigerare
 page-editor-max-number-of-items-edit-mode-description=Maximalt antal objekt som visas i en samling är begränsade i redigeringsläget på grund av sidåtergivningsprestanda. Den här gränsen påverkar inte samlingens visualisering på den publicerade sidan. Prestandan för redigeringsläget på en innehållssida kan påverkas negativt om det här värdet ökar.
 page-elements=Sidelement
