--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11586,6 +11586,7 @@ page-design-options=خيارات تصميم الصفحة
 page-display-order=ترتيب عرض الصفحة
 page-edition-mode-x=وضع تحرير الصفحة: {0}
 page-editor-auto-extend-session-enabled-description=سيؤدي التمكين إلى تمديد الجلسة تلقائيًا في حين فتح محرر الصفحة.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=محرر الصفحة
 page-editor-max-number-of-items-edit-mode-description=يكون أقصى عدد للعناصر المعروضة في مجموعة محدودًا في وضع التحرير، بسبب أداء عرض الصفحة. لا يؤثر هذا التحديد على العرض المرئي للمجموعة في الصفحة المنشورة. برجاء العلم أن زيادة هذه القيمة قد يكون له تأثير سلبي على الأداء في وضع التحرير لصفحة محتوى.
 page-elements=عناصر الصفحة
