--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11587,6 +11587,7 @@ page-design-options=Opzioni struttura pagina (Automatic Translation)
 page-display-order=Ordine di visualizzazione delle Pagine
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=L'abilitazione estenderà automaticamente la sessione mentre viene aperto l'editor di pagine. (Automatic Translation)
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Editor di pagine (Automatic Translation)
 page-editor-max-number-of-items-edit-mode-description=The maximum number of items that are shown in a collection are limited in the Edit mode, due to page render performance. This limit does not affect the collection visualization in the published page. Please be aware that increasing this value might have a negative impact on the performance of the Edit mode of a Content Page. (Automatic Copy)
 page-elements=Elementi pagina (Automatic Translation)
