--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11586,6 +11586,7 @@ page-design-options=페이지 디자인 옵션
 page-display-order=페이지 전시 명령
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=활성화하면 페이지 편집기가 열려 있는 동안 세션이 자동으로 확장됩니다.
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=페이지 에디터
 page-editor-max-number-of-items-edit-mode-description=컬렉션에 표시되는 최대 항목 수는 페이지 렌더링 성능으로 인해 편집 모드에서 제한됩니다. 이 제한은 게시된 페이지의 컬렉션 시각화에 영향을 주지 않습니다. 이 값을 늘리면 콘텐츠 페이지의 편집 모드 성능에 부정적인 영향을 미칠 수 있습니다.
 page-elements=페이지 요소
