--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11586,6 +11586,7 @@ page-design-options=Možnosti návrhu strany (Automatic Translation)
 page-display-order=Poradie zobrazenia stránok
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=Povolením sa relácia automaticky rozšíri, kým sa otvorí editor stránok. (Automatic Translation)
+page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
 page-editor-configuration-name=Editor stránok (Automatic Translation)
 page-editor-max-number-of-items-edit-mode-description=The maximum number of items that are shown in a collection are limited in the Edit mode, due to page render performance. This limit does not affect the collection visualization in the published page. Please be aware that increasing this value might have a negative impact on the performance of the Edit mode of a Content Page. (Automatic Copy)
 page-elements=Prvky strany (Automatic Translation)
